# solana-backtest

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BATCH_BACKTEST_GUIDE.md  CLAUDE.md  DASHBOARD_PREVIEW_V12.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_V12_RECIPE.md  Dockerfile  Makefile  Procfile  QUICKSTART.md  README.md  REAL_DATA_GUIDE.md  app.py  build.sh  docker-compose.yml  example.py  init.sql  main.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements-minimal.txt  requirements.txt  start.sh  test_imports.py
.github/workflows/: ci.yml
config/: __init__.py  logging.py  settings.py
frontend/: .env.example  README.md  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js
scripts/: build_frontend.sh
src/: __init__.py
src/api/: __init__.py  api_cache.py  birdeye_client.py  helius_client.py
src/data/: __init__.py  ingestion.py  models.py  validation.py
src/dex/: __init__.py  dex_base.py  meteora_dlmm.py  meteora_dyn.py  pump_fun.py  raydium_clmm.py  raydium_cpmm.py
src/engine/: __init__.py  backtest.py  detector.py  flexible_detector.py  job_manager.py  metrics.py  simulator.py
src/services/: __init__.py  token_monitor.py  token_tracker.py
src/strategies/: __init__.py  backtest_recipe_v12.py  manager.py  templates.py
src/utils/: __init__.py  (+4 more)
tests/: conftest.py  test_api_endpoints.py  test_backtest_recipe_v12.py  test_data_validation.py  test_dex_parsers.py  test_flexible_detector.py  test_ladder_exit.py  test_performance_utils.py  test_strategy_manager.py
(+13 files in other folders)
