[tool.poetry]
name = "solana-backtest"
version = "1.0.0"
description = "Production-ready Solana token backtesting system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
aiohttp = "^3.9.1"
httpx = "^0.25.2"
backoff = "^2.2.1"
ratelimit = "^2.2.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
pytz = "^2023.3"
base58 = "^2.1.1"
solders = "^0.19.0"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"